// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

enum FileType {
  Normal = 0;
  Symlink = 1;
  Executable = 2;
}

message FileState {
  uint64 mtime_millis_since_epoch = 1;
  uint64 size = 2;
  FileType file_type = 3;
}

message TreeState {
  bytes tree_id = 1;
  map<string, FileState> file_states = 2;
}

message Checkout {
  bytes commit_id = 1;
}